# DeviceControlDemo

./: .gitignore  CMakeLists.txt  README.md  config.json  downsampler.h  widget.cpp
src/: configmanager.cpp  configmanager.h  databasemanager.cpp  databasemanager.h  main.cpp  widget.h  worker.cpp  worker.h
